[gd_scene load_steps=4 format=3 uid="uid://dv2bq68so84wl"]

[ext_resource type="Texture2D" uid="uid://ye3hphaess0h" path="res://gui/capacity/capacity_icon.png" id="1_posxg"]
[ext_resource type="Theme" uid="uid://bmbd2indv7vih" path="res://gui/menu.tres" id="1_r74gv"]
[ext_resource type="Script" path="res://gui/capacity/capacity_ui.gd" id="2_3fwgy"]

[node name="CapacityUI" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme = ExtResource("1_r74gv")
script = ExtResource("2_3fwgy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -139.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -9

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("1_posxg")
expand_mode = 2

[node name="PopulationLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "16"
vertical_alignment = 1

[node name="SpacerLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="CapacityLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1200"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlusLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "         +"

[node name="DemandLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "20"
